src/pages/about/About.css
.primary_font {
  font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
  /* font-size: 2em; */
}

.secondary_font {
  font-family: "roboto_regular";
  font-style: normal;
  font-weight: normal;
  font-size: 1em;
  line-height: 28px;
}

.secondary_font_bold {
  font-family: "roboto_regular";
  font-style: medium;
  font-weight: bold;
  font-size: 1em;
  line-height: 28px;
}

.aboutPage {
  /* max-width: 100% !important; */
}

.aboutPageHeaderText {
  margin-right: 100px;
}

.aboutPageHeaderTitle {
  margin-bottom: 20px;
}

.aboutPageTitle {
  margin-bottom: 175px;
  margin-top: 100px;
  align-content: center;
}

.byTheNumbersObject {
  align-content: center;
  justify-content: center;
}

.byTheNumbersObjectContent {
  align-content: center;
  justify-content: center;
  text-align: center;
}

.who-we-are-image-container {
  justify-content: flex-end;
  padding: 5%;
  padding-left: 200px;
}

.mobile-who-we-are-image-container {
  display: block;
}

.mobile-about-page-who-we-are-image {
  width: 80%;
  margin-bottom: 20px;
  margin-top: 20px;
  margin-left: 37.5px;
}

.about-page-who-we-are-image {
  max-width: 50%;
  max-height: auto;
  margin-right: 50px;
}

.aboutPageWhoWeAreContent {
  margin: 0 20px 0 20px;
  color: white;
}

.mobile-aboutPageWhoWeAreContent {
  margin: 0 30px;
  color: white;
  padding-bottom: 20px;
  text-align: center;
}

.aboutPageWhoWeAreContentContainer {
  display: flex;
  align-items: center;
}

.by-the-numbers {
  justify-content: center;
  padding-bottom: 5%;
}

.byTheNumbersObjectContainer {
  height: 150px;
  padding-bottom: 150px;
  padding-top: 50px;
}

.aboutPageNumbersObjectSubtitle {
  margin: 0 20px 0 20px;
}

.aboutPageLeadershipTeam {
  display: flex;
  flex-wrap: wrap;
}

.leaderImage {
  display: flex;
  margin-bottom: 75px;
  flex-shrink: 2;
  margin-left: 10px;
  margin-right: 10px;
}

.leadership-team-container {
  margin: 15px 10px !important;
}

.leadershipObjectContainer {
  height: 150px;
  padding-bottom: 150px;
  padding-top: 50px;
  margin-bottom: 10px;
  /* border: solid red 2px; */
  max-width: 300px;
}

.leadershipObjectContent {
  justify-content: center;
  text-align: center;
}

.partnersTitle {
  padding: 0 10% 0 10%;
  text-align: center;
}

.aboutPagePartnersImage {
  display: flex;
  justify-content: space-around;
  max-width: 200px;
  width: 100%;
  height: auto;
}

.mobile-homePartnerImagesContainer {
  display: flex;
}
/* 
.mobile-aboutPartnerImages {
  width: 50%;
  height: auto;
  margin-bottom: 30px;
} */

.mobile-about-partners-container {
  border: solid red 2px;
}

.mobile-aboutPartnerImagesRow {
  border: solid blue 2px;
}

.aboutPartners {
  margin-bottom: 50px;
  justify-content: center;
}

.counselor-advisor-container {
  margin: 15px 5px;
  min-height: 620px;
  display: flex;
  justify-content: center;
}

.counselor-advisor-container-inner-object {
  padding: 20px;
  font-size: 20px;
}

/* WORK FROM HERE */

.aboutPageCounselorTitle {
  margin: auto;
}

.counselors {
  margin-bottom: 150px;
}

.advisorObject {
  background-color: white;
  margin: 15px 30px;
}

.centeredText {
  text-align: center;
}

.officesContainer {
  padding: 10% 5%;
  background-color: #2b1f31;
  color: white;
}

.officeImgContainer {
  display: flex;
  justify-content: center;
  margin-bottom: 5%;
}

.offices_row {
  display: flex;
  align-items: center;
  justify-content: center;
}
.officeTitle {
  color: white;
}

.white-text {
  color: white !important;
}

.mobile-hero-image-container {
  display: flex;
  justify-content: center;
}

.mobile-header {
  border: solid blue 2px;
}

.mobile-hero-image {
  width: 105%;
  height: auto;
}

.mobile-top-row-header-container {
  padding: 0 20px;
}

.reduced-margin-bottom {
  margin-bottom: 0px;
}

.full-width-light-blue {
  margin: 0 -9999rem;
  /* add back negative margin value */
  padding: 0.25rem 9999rem;
  background: #ebf9ff;
}

.full-width-near-black {
  margin: 0 -9999rem;
  /* add back negative margin value */
  padding: 0.25rem 9999rem;
  background: #2b1f31;
}

.full-width-dark-blue {
  margin: 0 -9999rem;
  /* add back negative margin value */
  padding: 0.25rem 9999rem;
  background: #1786df;
}

.about-partners-columns {
  margin: 0 75px;
}

.by-the-numbers-object-image {
  margin-bottom: 15px;
}

